--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A Facebook chat bot",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thijs Deelen",
   "license": "ISC",
