--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "facebot",
   "version": "1.0.0",
-  "description": "A Facebook chat bot",
-  "main": "app.js",
+  "description": "facebot for facebook",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thijs Deelen",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2"
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "request": "^2.81.0"
   }
 }
